2014-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Drop dvipdf-x.

2014-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-cxx-hack.m4: Adapt for 32- and 64-bit Cygwin.
	From Ken Brown <kbrow1i@gmail.com>.

2014-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: Simplify.

2014-02-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: Adapt to proxy build system.

2014-02-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_libs_pkgs): Add luajit.
	* kpse-luajit-flags.m4: New file.

2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4: Renamed paper => libpaper. Removed songs.
	* kpse-paper-flags.m4 (removed): Renamed ...
	* kpse-libpaper-flags.m4 (new): ... into this.

2014-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-freetype2-flags.m4: Correct location of ft2build.h.

2013-12-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_utils_pkgs): Add songs.

2013-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4: Move psutils from ../utils/ to ../texk/.

2013-11-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-freetype2-flags.m4: New layout of installed headers.

2013-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_libs_pkgs): Add paper.
	* kpse-paper-flags.m4: New file.

2013-09-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_libs_pkgs): Drop freetype (Version 1.5).
	(kpse_texk_pkgs): Drop ttf2pk.

2013-09-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4 (KPSE_RECURSE_LIBS, KPSE_RECURSE_PROGS):
	New macros to recurse into all library and program modules.
	Ignore missing modules (at both autoconf and configure time).

2013-09-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-freetype2-flags.m4: No reason to require Libtool.

2013-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-zlib-flags.m4 (KPSE_ZLIB_FLAGS): Test if <<zlib.h> defines