@@ -1,3 +1,8 @@
+2014-03-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-luajit-flags.m4 (KPSE_LUAJIT_DEFINES): Set LUAJIT_LDEXTRA
+	to the additional LDFLAGS for 64-bit Darwin.
+
 2014-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-pkgs.m4 (kpse_texk_pkgs): Drop dvipdf-x.
